--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   },
   "dependencies": {
     "@spider-rs/spider-rs": "^0.0.157",
-    "html-to-text": "^9.0.5"
+    "html-to-text": "^9.0.5",
+    "pg-promise": "^11.10.2"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
