fix: update crawler config

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "@spider-rs/spider-rs": "^0.0.157",
+    "crawler": "^2.0.2",
     "html-to-text": "^9.0.5",
     "pg-promise": "^11.10.2"
   },
