fix: db queries bug

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "headless-chrome": "chromium --headless --remote-debugging-port=9222",
-    "crawl": "npm run headless-chrome; tsx crawler.ts",
+    "crawl": "npm run headless-chrome & CHROME_URL=http://localhost:9222 tsx crawler.ts",
     "tsx": "tsx"
   },
   "dependencies": {
