--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 annotated-types==0.7.0
 anyio==4.7.0
+argcomplete==3.5.3
 arrow==1.3.0
+b2==4.2.0
+b2sdk==2.7.0
 beautifulsoup4==4.12.3
 binaryornot==0.4.4
 blessed==1.20.0
@@ -30,6 +33,7 @@ idna==3.10
 inquirer==3.4.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
+logfury==1.0.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 maturin==1.8.0
@@ -37,6 +41,8 @@ mdurl==0.1.2
 more-itertools==10.5.0
 multidict==6.1.0
 packaging==24.2
+phx-class-registry==4.1.0
+platformdirs==4.3.6
 propcache==0.2.1
 psutil==6.1.1
 pydantic==2.10.4
@@ -53,6 +59,7 @@ readchar==4.2.1
 requests==2.32.3
 requests-file==2.1.0
 rich==13.9.4
+rst2ansi==0.1.5
 runs==1.2.2
 shellingham==1.5.4
 six==1.17.0
@@ -60,9 +67,11 @@ sniffio==1.3.1
 sortedcollections==2.1.0
 sortedcontainers==2.4.0
 soupsieve==2.6
+tabulate==0.9.0
 tantivy==0.22.0
 text-unidecode==1.3
 tldextract==5.1.3
+tqdm==4.67.1
 typer==0.15.1
 types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
