--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "crawl": "npm run headless-chrome & CHROME_URL=http://localhost:9222 tsx crawler.ts",
     "tsx": "tsx",
     "serve": "flask run --reload --debug",
-    "publish-index": "tar -zcvf /tmp/index.tar.gz index/ && b2 file upload search-engine-index /tmp/index.tar.gz index.tar.gz"
+    "publish-index": "tar -zcvf /tmp/index.tar.gz index/ && b2 rm b2://search-engine-index/index.tar.gz; b2 file upload search-engine-index /tmp/index.tar.gz index.tar.gz"
   },
   "dependencies": {
     "@spider-rs/spider-rs": "^0.0.157",
