--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@spider-rs/spider-rs": "^0.0.157",
-    "crawler": "^2.0.2",
+    "dotenv": "^16.4.7",
     "html-to-text": "^9.0.5",
     "mongodb": "^6.12.0"
   },
